<ul class="middlebar_nav p-3"><li><a class="mbar_thubnail" href="#"><img class="pt-3"src="production/images/ico/UK/flag_ico.png" alt=""></a> <b class="blue">UK Gas Market Rallies on the back of the Oil market</b> <br/> <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit...</small></li><li><a class="mbar_thubnail" href="#"><img class="pt-3"src="production/images/ico/UK/ship_ico.png" alt=""></a> <b class="blue"> Spark spreads narrow as gas market tightens </b> <br/> <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit...</small></li><li><a class="mbar_thubnail" href="#"><img class="pt-3"src="production/images/ico/UK/hands_ico.png" alt=""></a> <b class="blue"> Norway supplies to UK slip </b> <br/> <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit...</small></li><li><a class="mbar_thubnail" href="#"><img class="pt-3"src="production/images/ico/UK/city_ico.png" alt=""></a> <b class="blue"> NBP holding up despite falling power prices </b> <br/> <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit...</small></li></ul>
