@@ -1,2 +1,3 @@
 <img class="img-fluid " src="production/images/MahulContent/Electricity_Power_UK_grey.png" alt="" style="height: 27em">   
 
+<img class="img-fluid " src="production/images/MahulContent/Gas_Netherlands_TTF_grey.png" alt="" style="height: 27em">
