@@ -1,0 +1,42 @@
+<b>U7BTGKP7T</b></br>dupa
+<b>BOT</b></br>wwww
+<b>U7BTGKP7T</b></br>yyyyy
+<b>U7BTGKP7T</b></br>asASasASA
+<b>U7BTGKP7T</b></br>Natalia
+<b>U7BTGKP7T</b></br>Kasia
+<b>U7BTGKP7T</b></br>Zosia
+<b>U7BTGKP7T</b></br>Marysia
+<b>U7BTGKP7T</b></br>trttttt
+<b>BOT</b></br>recap
+<b>BOT</b></br>ok, please do it
+<b>BOT</b></br>Warsaw
+<b>U7BTGKP7T</b></br>recap
+<b>BOT</b></br>ok, please do it
+<b>U7BTGKP7T</b></br>nfosys sellls
+<b>BOT</b></br>What is the buyer?
+<b>U7BTGKP7T</b></br>ORACLE
+<b>BOT</b></br>What is the buyer?
+<b>U7BTGKP7T</b></br>Oracle
+<b>BOT</b></br>What is the buyer?
+<b>U7BTGKP7T</b></br>Bayer
+<b>BOT</b></br>What is the buyer?
+<b>U7BTGKP7T</b></br>Shell
+<b>BOT</b></br>What is the buyer?
+<b>U7BTGKP7T</b></br>to Shell
+<b>BOT</b></br>What is the trader?
+<b>U7BTGKP7T</b></br>From Infosys
+<b>BOT</b></br>What is the trader?
+<b>U7BTGKP7T</b></br>Infosys sells
+<b>BOT</b></br>What is the date-period?
+<b>U7BTGKP7T</b></br>dec
+<b>BOT</b></br>What is the quantity?
+<b>U7BTGKP7T</b></br>100000
+<b>BOT</b></br>What is the quantityunit?
+<b>U7BTGKP7T</b></br>TTF
+<b>BOT</b></br>What is the quantityunit?
+<b>U7BTGKP7T</b></br>therm
+<b>BOT</b></br>What is the price?
+<b>U7BTGKP7T</b></br>50
+<b>BOT</b></br>What is the Currency?
+<b>U7BTGKP7T</b></br>GBP
+<b>BOT</b></br>Got it, thank you
