@@ -1,2 +1,3 @@
 <img class="img-fluid " src="production/images/MahulContent/tblUK-Electricity-Baseload-GRG.png" >
 
+<img class="img-fluid " src="production/images/MahulContent/tblGas-Netherlands-TTF.png" alt="" >
